...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSelectPoster" />

        <!-- Event Name Input -->
        <EditText
            android:id="@+id/titleEt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="Enter event name"
...
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp" />

        <!-- Event Tag Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tagLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@android:color/white"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="20dp">

            <AutoCompleteTextView
                android:id="@+id/tagDropdown"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_edittext_rounded"
                android:padding="10dp"
                android:inputType="none"
                android:hint="Event Tag"
...
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp" />

        <!-- Event Description Input -->
        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="Describe your event"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp" />

        <EditText
            android:id="@+id/locationEt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="Enter location"
...
            android:layout_marginHorizontal="20dp"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"/>

        <TextView
            android:id="@+id/eventDateEt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="DD/MM/YYYY 00:00"
...
            android:layout_marginHorizontal="20dp"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"/>

        <TextView
            android:id="@+id/registrationStartDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="DD/MM/YYYY 00:00"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp" />

        <TextView
            android:id="@+id/registrationEndDate"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="DD/MM/YYYY 00:00"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp" />

        <EditText
            android:id="@+id/maxEntrantsInput"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_edittext_rounded"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:hint="Max entrants (e.g. 50)"
...
            android:backgroundTint="@color/light_red"
            android:text="Cancel"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/waitingListCapInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/createEventButton"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp" />

        <!-- Create Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/createEventButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/light_blue"
            android:text="Create Event"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/waitingListCapInput"
            app:layout_constraintStart_toEndOf="@id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
...
