<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Create your profile"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>

        <EditText
            android:padding="4dp"
            android:id="@+id/et_name"
            android:hint="Full name"
            android:textColorHint="@color/white_grey"
            android:textColor="@color/white"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:padding="4dp"
            android:id="@+id/et_email"
            android:hint="Email"
            android:textColorHint="@color/white_grey"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            />

        <EditText
            android:padding="4dp"
            android:id="@+id/et_phone"
            android:hint="Phone Number(optional)"
            android:textColorHint="@color/white_grey"
            android:textColor="@color/white"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:textColor="@color/black"
            android:text="Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white_grey"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>