...
    <string name="app_name">LotteryPatentPending</string>
    <string name="title_activity_qrscanner">QRScannerActivity</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="scan">Scan</string>
    <string name="attendee">Attend Event</string>
    <string name="organizer">Organize Event</string>
    <string name="admin">Admin Login</string>
    <string name="inbox">Inbox</string>
    <string name="notificationImage">Notification 24x24</string>
    <string name="notif_logs_empty_title">No notification logs yet</string>
    <string name="notif_logs_empty_body">When organizers send messages, they’ll show up here.</string>
    <string name="notif_title">Notification Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qr_preview">QR preview</string>
    <string name="event_history">Event History</string>
    <string name="browse_events">Browse Events</string>
    <string name="create_event">Create Event</string>
    <string name="join">Join</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="leave">Leave</string>
    <string name="filter">Filter\n</string>
    <string name="search">Search</string>
    <string name="message">Type your message here..</string>
...
